add networks default and wolrd

--- a/contrib/docker/docker-compose.yml
+++ b/contrib/docker/docker-compose.yml
@@ -137,3 +137,7 @@ services:
   #   restart: always
   #   volumes:
   #     - ./pycsw/pycsw.cfg:/etc/pycsw/pycsw.cfg
+
+networks:
+  default:
+  world:
