Updated production.ini files
Production.ini files now point to hakai theme and hakai schema.

--- a/contrib/docker/production_non_root_url.ini
+++ b/contrib/docker/production_non_root_url.ini
@@ -126,7 +126,7 @@ ckan.plugins = stats
               spatial_metadata
               spatial_query
               spatial_harvest_metadata_api
-              cioos_theme
+              hakai_theme
               cioos_harvest
               package_converter
               scheming_datasets
@@ -147,13 +147,13 @@ package_converter.converters =
         ckanext.package_converter.model.cioos-siooc_iso_converter.cioosIso19139Converter
 
 #   module-path:file to schemas being used
-scheming.dataset_schemas = ckanext.scheming:cioos_siooc_schema.json
+scheming.dataset_schemas = hakai.scheming:hakai_schema.json
 scheming.presets = ckanext.scheming:presets.json
                    ckanext.repeating:presets.json
                    ckanext.composite:presets.json
                    ckanext.fluent:presets.json
 scheming.dataset_fallback = true
-scheming.organization_schemas = ckanext.scheming:organization.json
+scheming.organization_schemas = hakai.scheming:organization.json
 
 
 ckan.spatial.spatial_widget_expands = false
@@ -206,7 +206,7 @@ ckan.display_timezone = UTC
 #ckan.recaptcha.privatekey =
 
 #license file downloaded from https://licenses.opendefinition.org/licenses/groups/ckan.json
-licenses_group_url = file:///usr/lib/ckan/venv/src/ckan/contrib/docker/src/cioos-siooc-schema/ckan_license.json
+licenses_group_url = file:///usr/lib/ckan/venv/src/ckan/contrib/docker/src/hakai-schema/ckan_license.json
 
 # ckan.template_footer_end =
 
